--- a/.babelrc
+++ b/.babelrc
@@ -8,7 +8,8 @@
                 },
                 "debug": false
             }
-        ]
+        ],
+        "@babel/preset-react"
     ],
     "plugins": ["@babel/plugin-transform-runtime"]
 }
