--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.2.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-async-to-promises": "^1.0.5",
@@ -34,7 +36,8 @@
     "webpack-hot-middleware": "^2.24.3"
   },
   "dependencies": {
-    "@babel/register": "^7.0.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3"
   }
 }
