--- a/package.json
+++ b/package.json
@@ -35,6 +35,15 @@
   },
   "dependencies": {
     "@babel/register": "^7.0.0",
-    "express": "^4.16.4"
+    "autoprefixer": "^9.4.3",
+    "express": "^4.16.4",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
+    "node-sass": "^4.11.0",
+    "postcss": "^7.0.7",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2"
   }
 }
