--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   },
   "dependencies": {
     "@babel/register": "^7.0.0",
-    "express": "^4.16.4"
+    "awesome-typescript-loader": "^5.2.1",
+    "express": "^4.16.4",
+    "typescript": "^3.2.2"
   }
 }
