--- a/package.json
+++ b/package.json
@@ -34,9 +34,23 @@
     "webpack-hot-middleware": "^2.24.3"
   },
   "dependencies": {
+    "@angular/common": "^7.1.4",
+    "@angular/compiler": "^7.1.4",
+    "@angular/core": "^7.1.4",
+    "@angular/forms": "^7.1.4",
+    "@angular/http": "^7.1.4",
+    "@angular/platform-browser": "^7.1.4",
+    "@angular/platform-browser-dynamic": "^7.1.4",
+    "@angular/router": "^7.1.4",
     "@babel/register": "^7.0.0",
+    "@types/core-js": "^2.5.0",
+    "@types/node": "^10.12.18",
     "awesome-typescript-loader": "^5.2.1",
+    "core-js": "^2.6.1",
     "express": "^4.16.4",
-    "typescript": "^3.2.2"
+    "reflect-metadata": "^0.1.12",
+    "rxjs": "^6.3.3",
+    "typescript": "^3.2.2",
+    "zone.js": "^0.8.26"
   }
 }
